<resources>
    <string name="app_name">农业帮手</string>
    <string name="home_page">寻宝</string>
    <string name="bo_page">消息</string>
    <string name="ji_page">购物车</string>
    <string name="shu_page">好方法</string>

    <string name="drawer_close">Close nav drawer</string>
    <string name="drawer_open">Open nav drawer</string>
    <string name="drawer_settings">个性设置</string>
    <string name="drawer_about">关于我们</string>
    <string name="professsor">专家在线</string>
    <string name="teconolidge">技术专刊</string>
</resources>
